[gd_scene load_steps=5 format=2]

[ext_resource path="res://utils/AnimatedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/options_ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/sfx/menu/menu_play_game.ogg" type="AudioStream" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 250
custom_constants/margin_top = 20
custom_constants/margin_left = 20

[node name="V" type="VBoxContainer" parent="M"]
margin_left = 20.0
margin_top = 20.0
margin_right = 134.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="M/V"]
margin_right = 114.0
margin_bottom = 16.0
text = "Title"
valign = 1

[node name="M" type="MarginContainer" parent="M/V"]
margin_top = 20.0
margin_right = 114.0
margin_bottom = 92.0
custom_constants/margin_right = 20
custom_constants/margin_left = -3

[node name="P" type="PanelContainer" parent="M/V/M"]
margin_left = -3.0
margin_right = 94.0
margin_bottom = 72.0
size_flags_vertical = 4

[node name="V" type="VBoxContainer" parent="M/V/M/P"]
margin_left = 5.0
margin_top = 5.0
margin_right = 92.0
margin_bottom = 67.0

[node name="Start" parent="M/V/M/P/V" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 87.0
margin_bottom = 18.0
text = "Start"
align = 0
play_pressed = false

[node name="Settings" parent="M/V/M/P/V" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 87.0
margin_bottom = 40.0
text = "Settings"
align = 0

[node name="Credits" parent="M/V/M/P/V" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 87.0
margin_bottom = 62.0
text = "Credits"
align = 0

[node name="Credits" type="PanelContainer" parent="."]
margin_left = 17.0
margin_top = 275.0
margin_right = 168.0
margin_bottom = 341.0

[node name="V" type="VBoxContainer" parent="Credits"]
margin_left = 5.0
margin_top = 5.0
margin_right = 146.0
margin_bottom = 61.0

[node name="Code" type="Label" parent="Credits/V"]
margin_right = 141.0
margin_bottom = 16.0
text = "Code - Nothing#3367"

[node name="Art" type="Label" parent="Credits/V"]
margin_top = 20.0
margin_right = 141.0
margin_bottom = 36.0
text = "Art - AJ#3414"

[node name="Audio" type="Label" parent="Credits/V"]
margin_top = 40.0
margin_right = 141.0
margin_bottom = 56.0
text = "Audio - Adam G.#6404"

[node name="StartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="pressed" from="M/V/M/P/V/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="M/V/M/P/V/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="M/V/M/P/V/Credits" to="." method="_on_Credits_pressed"]
[connection signal="finished" from="StartSFX" to="." method="_on_StartSFX_finished"]
